--- a/suderereact/src/styles/index.scss
+++ b/suderereact/src/styles/index.scss
@@ -1,4 +1,7 @@
 @import './_settings';
 @import './header.scss';
 @import './choiceHome.scss';
+@import './admin';
+@import './dashboardLeft';
+@import './dashboardRight';
 
