--- a/suderereact/src/styles/_settings.scss
+++ b/suderereact/src/styles/_settings.scss
@@ -1,9 +1,11 @@
 $carbone: #333333;
-$warm_gray_3: #C3BEB4;
-$orange: #E05206;
+$warm_gray_1: #e0ded8;
+$orange: #e05206;
+$framboise: #cd0037;
 
-
-body{
+body {
     background-color: $carbone;
     margin: 0;
+    height: 100%;
+    width: 100%;
 }
