--- a/suderereact/src/styles/_header.scss
+++ b/suderereact/src/styles/_header.scss
@@ -1,19 +1,67 @@
 .global {
     &_header {
         display: flex;
+        align-items: center;
+        background-color: $carbone;
+        height: 16vh;
         &_logo {
+            margin-left: 1%;
+            @media screen and (max-width: 520px) {
+                display: none;
+            }
+            &_sncf {
+                height: 8vh;
+            }
+        }
+        &_logo-2 {
+            margin-right: 1%;
+            z-index: -10;
+            @media screen and (max-width: 520px) {
+                display: none;
+            }
             &_sncf {
                 height: auto;
                 width: 10vw;
             }
-            
         }
-        &_title{
-            &_h1{
+        &_title {
+            text-align: center;
+            margin: auto;
+            &_h1 {
                 color: white;
+                font-size: 5vh;
+                margin: 1vh;
+                @media screen and (max-width: 520px) {
+                    font-size: 4vh;
+                }
             }
-            &_h2{
+            &_h2 {
                 color: white;
+                font-size: 3vh;
+                margin: 1vh;
+                @media screen and (max-width: 520px) {
+                    font-size: 2vh;
+                }
+            }
+        }
+    }
+
+    &_footer {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 16vh;
+        width: 100%;
+        &_logo-3 {
+            display: none;
+            @media screen and (max-width: 520px) {
+                display: block;
+            }
+            &_sncf {
+                height: 8vh;
+                @media screen and (max-width: 520px) {
+                    height: 6vh;
+                }
             }
         }
     }
