--- a/suderereact/src/styles/index.scss
+++ b/suderereact/src/styles/index.scss
@@ -3,5 +3,8 @@
 @import './choiceHome.scss';
 @import './admin';
 @import './dashboardLeft';
+@import './userInfos';
+@import './userPassword';
 @import './dashboardRight';
-
+@import './updateUser';
+@import './userList';
