--- a/suderereact/src/styles/index.scss
+++ b/suderereact/src/styles/index.scss
@@ -4,4 +4,8 @@
 @import './admin';
 @import './dashboardLeft';
 @import './dashboardRight';
+@import './commonPage';
+@import './leftPage';
+@import './centerPage';
+@import './rightPage';
 
