--- a/suderereact/src/styles/_dashboardRight.scss
+++ b/suderereact/src/styles/_dashboardRight.scss
@@ -1,31 +1,47 @@
 .dashboardRight{
     width: 100%;
-    background-color: $warm_gray_1;
-    padding: 5px;
     &__title{
-        margin-left: 20px;
+        display: block;
+        margin-top: 1.5%;
+        margin-right: 1.5%;
+        margin-left: 1.5%;
+        margin-bottom: 0;
         font-size: 2em;
     }
     &__nav{
+        margin-top: 1.5%;
+        margin-right: 1.5%;
+        margin-left: 1.5%;
+        margin-bottom: 0;
+        padding: 0;
         background-color: $carbone;
         color: white;
-        margin: 20px;
-        margin-bottom: 0;
-        padding: 20px;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        list-style: none;
-        &__link{
-            text-decoration: none;
-            color: white;
-            font-size: 1.5em;
-            &--active{
-                color: $orange;
+        
+        &__ul{
+            margin: 0;
+            padding: 20px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            list-style: none;
+            &__link{
                 text-decoration: none;
+                color: white;
                 font-size: 1.5em;
-
+                &--active{
+                    color: $orange;
+                    text-decoration: none;
+                    font-size: 1.5em;
+    
+                }
             }
-        }
+        }  
+    }
+    &__outlet{
+        margin-right: 1.5%;
+        margin-left: 1.5%;
+        margin-bottom: 1.5%;
+       
+        background-color: $warm_gray_3;
     }
 }
