--- a/suderereact/src/styles/_updateUser.scss
+++ b/suderereact/src/styles/_updateUser.scss
@@ -1,5 +1,12 @@
 .updateUser{
-    margin: 20px;
-    width: 100%;
-    background-color: $warm_gray_3;
+    margin-right: 1.5%;
+    margin-left: 1.5%;
+    padding-top: 1.5%;
+    padding-bottom: 1.5%;
+    width: 97%;
+    &__userList{
+        
+        background-color: white;
+        width: 40%;
+    }
 }
