--- a/suderereact/src/styles/_centerPage.scss
+++ b/suderereact/src/styles/_centerPage.scss
@@ -7,10 +7,13 @@
     --font-pic-b: 1em;
     --font-pic-c: 1em;
     --font-pic-d: 1em;
-    --marge-a: 160px;
-    --marge-b: 235px;
-    --marge-c: 310px;
-    --marge-d: 370px;
+    --marge-a: 50px;
+    --marge-b: 120px;
+    --marge-c: 200px;
+    --marge-d: 300px;
+    --marge-e: 410px;
+    --marge-f: 500px;
+    --marge-g: 580px;
 }
 
 div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(9),
@@ -23,10 +26,13 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(9) 
     --font-pic-b: 1.5em;
     --font-pic-c: 2em;
     --font-pic-d: 1.5em;
-    --marge-a: 150px;
-    --marge-b: 210px;
-    --marge-c: 285px;
-    --marge-d: 365px;
+    --marge-a: 30px;
+    --marge-b: 90px;
+    --marge-c: 150px;
+    --marge-d: 225px;
+    --marge-e: 310px;
+    --marge-f: 400px;
+    --marge-g: 470px;
 }
 
 div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7),
@@ -39,20 +45,20 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7) 
     --font-pic-b: 2em;
     --font-pic-c: 1.5em;
     --font-pic-d: 1em;
-    --marge-a: 160px;
-    --marge-b: 235px;
-    --marge-c: 310px;
-    --marge-d: 370px;
+    --marge-a: 50px;
+    --marge-b: 120px;
+    --marge-c: 200px;
+    --marge-d: 300px;
+    --marge-e: 410px;
+    --marge-f: 500px;
+    --marge-g: 580px;
 }
 
 [class^="centerPage__carrousel_trailersPic_R"] {
     display: flex;
     align-items: center;
     position: absolute;
-    // left: 0;
-    // right: 0;
     width: 195px;
-    // text-align: center;
 }
 
 [class^="centerPage__carrousel_trailersPic_R"] img {
@@ -86,19 +92,25 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7) 
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    background-color: #E0DED8;
+    justify-content: space-between;
 
     &__infoRame {
-        max-width: 100%;
-        max-height: 19%;
+        width: 100%;
+        height: 13%;
         display: flex;
         justify-content: space-evenly;
-        color: orange;
+        background-color: #E0DED8;
+        color: red;
+        text-align: center;
+        font-size: 1.5em;
+
+        & h4 {
+            margin: auto 0;
+        }
     }
     &__carrousel {
         width: 100%;
-        height: 79%;
+        height: 85%;
         display: flex;
         justify-content: center;
         background-color: #E0DED8;
@@ -114,7 +126,7 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7) 
 
             &_R1 {
                 transition-delay: 1ms;
-                margin: 50px auto 0;
+                margin: var(--marge-a) auto 0;
                 transform: scale(1);
                 transition: all 0.5s;
                 z-index: 1;
@@ -122,7 +134,7 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7) 
 
             &_R2 {
                 transition-delay: 2ms;
-                margin: 100px auto 0;
+                margin: var(--marge-b) auto 0;
                 transform: scale(1);
                 transition: all 0.9s;
                 z-index: 2;
@@ -130,7 +142,7 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7) 
 
             &_R3 {
                 transition-delay: 3ms;
-                margin: var(--marge-a) auto 0;
+                margin: var(--marge-c) auto 0;
                 transform: scale(var(--scale-a)); /* variable 1.3 ou 1.0 suivant serie */
                 transition: all 0.9s;
                 z-index: 2;
@@ -138,7 +150,7 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7) 
 
             &_R4 {
                 transition-delay: 4ms;
-                margin: var(--marge-b) auto 0;
+                margin: var(--marge-d) auto 0;
                 transform: scale(var(--scale-b)); /* variable 1.6 ou 1.3 suivant serie */
                 transition: all 1s;
                 z-index: 2;
@@ -146,7 +158,7 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7) 
 
             &_R5 {
                 transition-delay: 5ms;
-                margin: var(--marge-c) auto 0;
+                margin: var(--marge-e) auto 0;
                 transform: scale(var(--scale-c)); /* variable 1.6 ou 1.3 suivant serie */
                 transition: all 0.9s;
                 z-index: 2;
@@ -154,7 +166,7 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7) 
 
             &_R6 {
                 transition-delay: 6ms;
-                margin: var(--marge-d) auto 0;
+                margin: var(--marge-f) auto 0;
                 transform: scale(var(--scale-d)); /* variable 1.3 ou 1.0 suivant serie */
                 transition: all 0.9s;
                 z-index: 2;
@@ -163,7 +175,7 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7) 
             &_R7 {
                 transition: all 0.5s;
                 transition-delay: 7ms;
-                margin: 420px auto 0;
+                margin: var(--marge-g) auto 0;
                 font-size: 1em;
                 transform: scale(1);
                 z-index: 2;
@@ -172,7 +184,7 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7) 
             &_R8 {
                 transition: all 0.5s;
                 transition-delay: 8ms;
-                margin: 470px auto 0;
+                margin: 530px auto 0;
                 transform: scale(1);
                 z-index: 2;
             }
@@ -180,7 +192,7 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7) 
             &_R9 {
                 transition: all 0.5s;
                 transition-delay: 9ms;
-                margin: 520px auto 0;
+                margin: 590px auto 0;
                 transform: scale(1);
                 z-index: 1;
             }
@@ -196,7 +208,7 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7) 
             &_bar {
                 display: flex;
                 width: 5px;
-                height: 100%;
+                height: 90%;
                 position: absolute;
                 background-color: white;
             }
@@ -208,8 +220,9 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7) 
                 font-size: 3em;
                 color: white;
                 background-color: orange;
-                margin-bottom: 10px;
+                margin: 10px 0;
                 z-index: 2;
+                border-radius: 10px;
             }
 
             &_Down {
@@ -219,8 +232,9 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7) 
                 font-size: 3em;
                 color: white;
                 background-color: orange;
-                margin-top: 25px;
+                margin: 25px 0 10px;
                 z-index: 2;
+                border-radius: 10px;
             }
 
             &_color {
