--- a/suderereact/src/styles/_commonPage.scss
+++ b/suderereact/src/styles/_commonPage.scss
@@ -15,7 +15,7 @@
     &__center {
         width: 48%;
         height: 96%;
-        background-color: green;
+        // background-color: green;
     }
 
     &__right {
