--- a/suderereact/src/styles/connexion.scss
+++ b/suderereact/src/styles/connexion.scss
@@ -5,10 +5,28 @@
     height: 68vh;
     width: 100%;
     justify-content: center;
+    &__home {
+        display: flex;
+        height: 8vh;
+        align-items: center;
+        margin-left: 1vw;
+        &__btn {
+            height: 6vh;
+            width: 6vh;
+            background-image: url("../../public/pictures/logo/flecheCarbone.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-color: transparent;
+            border: none;
+        }
+        &__btn:hover {
+            background-image: url("../../public/pictures/logo/flecheOrange.jpg");
+        }
+    }
     &__content {
         display: flex;
         width: 100%;
-        height: 52vh;
+        height: 44vh;
         align-items: center;
         &__login {
             display: flex;
@@ -74,6 +92,9 @@
             height: 35px;
             width: 200px;
             font-weight: bold;
+        }
+        &__submit:hover {
+            transform: scale(1.01);
         }
     }
 }
