--- a/suderereact/src/styles/_admin.scss
+++ b/suderereact/src/styles/_admin.scss
@@ -2,11 +2,13 @@
     background-color: $carbone;
     display: flex;
     flex-direction: row;
+    height: 100vh;
     &__left{
-        width: 25%;
+        width: 24%;
+        margin: 20px 0 20px 20px;
     }
     &__right{
-        width: 75%;
+        width: 76%;
         margin: 20px;
         background-color: $warm_gray_1;
     }
