--- a/suderereact/src/styles/_settings.scss
+++ b/suderereact/src/styles/_settings.scss
@@ -8,11 +8,19 @@ $warm_gray_1: #E0DED8;
 $warm_gray_3: #C3BEB4;
 $orange: #E05206;
 
-
+@mixin vertical-title {
+    margin: 0;
+    width: 100%;
+    transform: rotate( 180deg );
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
+    font-size: 3em;
+}
 
 body{
     background-color: $carbone;
     margin: auto;
     font-family: 'Avenir';
     width: 100%;
+    height: 100%;
 }
