--- a/suderereact/src/styles/_updateUser.scss
+++ b/suderereact/src/styles/_updateUser.scss
@@ -4,9 +4,15 @@
     padding-top: 1.5%;
     padding-bottom: 1.5%;
     width: 97%;
+    display: flex;
+    flex-direction: row;
     &__userList{
-        
+        margin-right: 1.5%;
         background-color: white;
-        width: 40%;
+        width: 38.5%;
+    }
+    &__userInformations{
+        background-color: grey;
+        width: 60%;
     }
 }
