add get centers route into API and add informations from selected user in react app

--- a/suderereact/src/styles/_updateUser.scss
+++ b/suderereact/src/styles/_updateUser.scss
@@ -12,7 +12,7 @@
         width: 38.5%;
     }
     &__userInformations{
-        background-color: grey;
+        background-color: $warm_gray_1;
         width: 60%;
     }
 }
