--- a/suderereact/src/styles/_userInformations.scss
+++ b/suderereact/src/styles/_userInformations.scss
@@ -2,8 +2,23 @@
     width: 90%;
     margin-top: 0;
     padding: 5%;
-    &__user{
-        margin: 20px 0px;
-        font-size: 1.2em;
+    font-size: 1.2em;
+    &__list{
+        list-style: none;
+        padding: 0;
+        margin: 0 auto;
+        &__item{
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            &--left{
+                margin: 0;
+                width: 40%;
+            }
+            &--right{
+                margin: 0 auto;
+                width: 40%;
+            }
+        }
     }
 }
