--- a/suderereact/src/styles/_commonPage.scss
+++ b/suderereact/src/styles/_commonPage.scss
@@ -3,24 +3,27 @@
     justify-content: space-evenly;
     align-items: center;
     width: 100vw;
-    height: 90vh;
+    height: 100vh;
     background-color: black;
 
     &__left {
-        width: 18%;
-        height: 96%;
-        background-color: white;
+        width: 24%;
+        height: 100%;
+        margin: 20px 0 20px 20px;
+        // background-color: white;
     }
 
     &__center {
-        width: 48%;
-        height: 96%;
+        width: 38%;
+        height: 100%;
+        margin: 20px 0 20px 0px;
         // background-color: green;
     }
 
     &__right {
-        width: 28%;
-        height: 96%;
-        background-color: orange;
+        width: 38%;
+        height: 100%;
+        margin: 20px 20px 20px 0;
+        // background-color: white;
     }
 }
