--- a/suderereact/src/styles/_centerPage.scss
+++ b/suderereact/src/styles/_centerPage.scss
@@ -100,7 +100,7 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7) 
         display: flex;
         justify-content: space-evenly;
         background-color: #E0DED8;
-        color: red;
+        color: $orange;
         text-align: center;
         font-size: 1.5em;
 
@@ -221,7 +221,7 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7) 
                 height: 100px;
                 font-size: 3em;
                 color: white;
-                background-color: orange;
+                background-color: $orange;
                 margin: 10px 0;
                 z-index: 2;
                 border-radius: 10px;
@@ -234,7 +234,7 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7) 
                 height: 100px;
                 font-size: 3em;
                 color: white;
-                background-color: orange;
+                background-color: $orange;
                 margin: 25px 0 10px;
                 z-index: 2;
                 border-radius: 10px;
