--- a/suderereact/src/styles/_leftPage.scss
+++ b/suderereact/src/styles/_leftPage.scss
@@ -12,11 +12,11 @@
         width: 100%;
 
         &__left {
-            height: 30%;
+            height: 100%;
             width: 100px;
 
             &__img {
-                height: 70%;
+                height: 30%;
                 width: 70%;
                 margin: auto;
             }
@@ -27,13 +27,32 @@
             flex-direction: column;
             align-items: flex-start;
             justify-content: flex-start;
-
+            
             &__returnButton {
                 width: 80px;
                 font-size: 1.5em;
                 border: none;
                 color: white;
-                background-color: black;
+                background-color: $carbone;
+            }
+            
+             & p {
+                color: white;
+                font-size: 1em;
+            }
+
+            &__input {
+                height: 50px;
+                width: 100px;
+                font-size: 2em;
+                font-weight: bold;
+                border: none;
+
+                &::-webkit-inner-spin-button {
+                    -webkit-appearance: none;
+                    margin:0;
+
+                }
             }
         }
     }
@@ -44,7 +63,7 @@
         width: 100%;
 
         &__title {
-            color: orange;
+            color: $orange;
          
            
         } 
@@ -55,13 +74,14 @@
                 
             & h4 {
                 color: white;
-                font-size: 1.5em;
+                font-size: 2.5em;
             }
 
             &__button {
                 border: none;
                 margin-bottom: 5px;
                 color: white;
+                font-size: 1.5em;
                 background-color: black;
             }
         }
@@ -69,17 +89,23 @@
 
     &__bottomBloc {
         display: flex;
+        justify-content: center;
+        align-items: flex-end;
         height: 10%;
         width: 100%;
 
         &__img {
-            height: 100%;
-            width: 100%;
+            height: 30%;
+            width: 10%;
+            margin-left: 30px;
         }
 
         &__button {
-            height: 80px;
+            height: 30px;
             border: none;
+            color: white;
+            background-color: $carbone;
+            font-size: 1.5em;
         }
     }
 }
