--- a/suderereact/src/styles/_settings.scss
+++ b/suderereact/src/styles/_settings.scss
@@ -2,6 +2,15 @@ $carbone: #333333;
 $warm_gray_3: #C3BEB4;
 $orange: #E05206;
 
+@mixin vertical-title {
+    margin: 0;
+    width: 100%;
+    transform: rotate( 180deg );
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
+    font-size: 3em;
+}
+
 
 body{
     background-color: $carbone;
