--- a/suderereact/src/styles/_commonPage.scss
+++ b/suderereact/src/styles/_commonPage.scss
@@ -4,7 +4,7 @@
     align-items: center;
     width: 100vw;
     height: 100vh;
-    background-color: black;
+    background-color: $carbone;
 
     &__left {
         width: 24%;
