--- a/suderereact/src/styles/_leftPage.scss
+++ b/suderereact/src/styles/_leftPage.scss
@@ -68,26 +68,35 @@
             color: white;
             display: flex;
             align-items: center;
-            &--vertical{
-                @include vertical-title;
+            margin: 0;
+            transform: rotate( 180deg );
+            writing-mode: vertical-rl;
+            text-orientation: mixed;
+            font-size: 3em;
+
+            & h4 {
+                margin-top: 0;
             }
         }
         
         &__filters {
             display: flex;
             flex-direction: column;
+            align-items: flex-end;
                 
             & h4 {
                 color: white;
                 font-size: 2.5em;
+                width: 20%;
             }
 
             &__button {
                 border: none;
+                width: 20%;
                 margin-bottom: 5px;
                 color: white;
                 font-size: 1.5em;
-                background-color: black;
+                background-color: $carbone;
             }
         }
     }
