--- a/suderereact/src/styles/Administration/_dashboardRight.scss
+++ b/suderereact/src/styles/Administration/_dashboardRight.scss
@@ -6,7 +6,7 @@
         margin-right: 1.5%;
         margin-left: 1.5%;
         margin-bottom: 0;
-        font-size: 2em;
+        font-size: 1.5vw;
     }
     &__nav{
         margin-top: 1.5%;
@@ -27,11 +27,11 @@
             &__link{
                 text-decoration: none;
                 color: white;
-                font-size: 1.5em;
+                font-size: 1.2vw;
                 &--active{
                     color: $orange;
                     text-decoration: none;
-                    font-size: 1.5em;
+                    font-size: 1.2vw;
     
                 }
             }
