--- a/suderereact/src/styles/Administration/_userFromList.scss
+++ b/suderereact/src/styles/Administration/_userFromList.scss
@@ -3,8 +3,9 @@
         text-decoration: none;
         border: none;
         background: none;
-        font-size: 1.2em;
+        font-size: 1vw;
         font-weight: 600;
+        margin: 5px 10px;
     }
     &__user:hover{
         color: $orange;
