--- a/suderereact/src/styles/Administration/_userInformations.scss
+++ b/suderereact/src/styles/Administration/_userInformations.scss
@@ -2,15 +2,17 @@
     width: 90%;
     margin-top: 0;
     padding: 5%;
-    font-size: 1.2em;
+    font-size: 1vw;
     &__list{
+        display: block;
         list-style: none;
         padding: 0;
-        margin: 0 auto;
+        margin: 0;
         &__item{
             width: 100%;
             display: flex;
             flex-direction: row;
+            margin: 10px;
             &--left{
                 margin: 0;
                 width: 40%;
@@ -18,6 +20,15 @@
             &--right{
                 margin: 0 auto;
                 width: 40%;
+                padding: 1px;
+                &--input{
+                    font-size: 1vw;
+                    padding: 5px;
+                }
+                &--option{
+                    font-size: 1vw;
+                    padding: 5px;
+                }
             }
         }
     }
