--- a/suderereact/src/styles/Administration/_userInfos.scss
+++ b/suderereact/src/styles/Administration/_userInfos.scss
@@ -7,6 +7,6 @@
         padding: 0;
         list-style: none;
         color: $orange;
-        font-size: 2em;
+        font-size: 1.5vw;
     }
 }
