--- a/suderereact/src/styles/Administration/_userPassword.scss
+++ b/suderereact/src/styles/Administration/_userPassword.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     color: white;
-    font-size: 1.5em;
+    font-size: 1.2vw;
     &__title{
         margin: 20px auto;
     }
@@ -34,7 +34,7 @@
             text-align: center;
             text-decoration: none;
             display: inline-block;
-            font-size: 1.2em;
+            font-size: 1vw;
         }
     }
 }
