--- a/suderereact/src/styles/index.scss
+++ b/suderereact/src/styles/index.scss
@@ -1,12 +1,13 @@
 @import './_settings';
 @import './header.scss';
 @import './choiceHome.scss';
-@import './admin';
-@import './dashboardLeft';
-@import './userInfos';
-@import './userPassword';
-@import './dashboardRight';
-@import './updateUser';
-@import './userList';
-@import './userInformations';
-@import './userFromList';
+@import './Administration/admin';
+@import './Administration/dashboardLeft';
+@import './Administration/userInfos';
+@import './Administration/userPassword';
+@import './Administration/dashboardRight';
+@import './Administration/updateUser';
+@import './Administration/userList';
+@import './Administration/userInformations';
+@import './Administration/userFromList';
+@import './Administration/updateButtons';
