Right component common page

--- a/suderereact/src/styles/_settings.scss
+++ b/suderereact/src/styles/_settings.scss
@@ -7,7 +7,7 @@ $Avenir: Avenir;
 $carbone: #333333;
 $warm_gray_1: #e0ded8;
 $orange: #e05206;
-$framboise: #cd0037;
+$raspberry: #cd0037;
 
 @mixin vertical-title {
     margin: 0;
