--- a/suderereact/src/styles/index.scss
+++ b/suderereact/src/styles/index.scss
@@ -8,3 +8,7 @@
 @import "./leftPage";
 @import "./centerPage";
 @import "./rightPage";
+@import "./connexion.scss";
+@import "./trailersInfoConnect.scss";
+@import "./trailersInfoConsult.scss";
+@import "./trailersModifConnect.scss";
