--- a/suderereact/src/styles/_choiceHome.scss
+++ b/suderereact/src/styles/_choiceHome.scss
@@ -65,7 +65,7 @@
         }
         &__title-2 {
             display: none;
-            color: $framboise;
+            color: $raspberry;
             @media screen and (max-width: 520px) {
                 margin: 8px;
                 display: block;
