--- a/suderereact/src/styles/_commonPage.scss
+++ b/suderereact/src/styles/_commonPage.scss
@@ -1,29 +1,23 @@
 .commonPage {
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 100vw;
     height: 100vh;
     background-color: $carbone;
 
     &__left {
         width: 24%;
-        height: 100%;
         margin: 20px 0 20px 20px;
         // background-color: white;
     }
 
     &__center {
         width: 38%;
-        height: 100%;
         margin: 20px 0 20px 0px;
         // background-color: green;
     }
 
     &__right {
         width: 38%;
-        height: 100%;
-        margin: 20px 20px 20px 0;
+        margin: 20px 20px 20px 20px;
         // background-color: white;
     }
 }
