--- a/suderereact/src/styles/_leftPage.scss
+++ b/suderereact/src/styles/_leftPage.scss
@@ -2,124 +2,138 @@
     height: 100%;
     width: 100%;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    font-family: $Avenir;
 
-    &__topBloc {
+    &__title {
+        width: 20%;
+        color: white;
         display: flex;
         align-items: center;
-        justify-content: center;
-        height: 20%;
-        width: 100%;
+        margin: 0;
+        transform: rotate(180deg);
+        writing-mode: vertical-rl;
+        text-orientation: mixed;
+        font-size: 3em;
 
-        &__left {
-            height: 100%;
-            width: 100px;
-
-            &__img {
-                height: 30%;
-                width: 70%;
-                margin: auto;
-            }
+        & h4 {
+            margin: 0;
         }
+    }
 
-        &__right {
+    &__right {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        width: 80%;
+        justify-content: center;
+
+        &__topBloc {
             display: flex;
             flex-direction: column;
-            align-items: flex-start;
-            justify-content: flex-start;
-            
+            align-items: center;
+            justify-content: space-between;
+            height: 30%;
+            width: 100%;
+
             &__returnButton {
-                width: 80px;
-                font-size: 1.5em;
+
+                margin-bottom: 20px;
+                height: 6vh;
+                width: 6vh;
+                background-image: url("../../public/pictures/logo/flecheBlanche.jpg");
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-color: transparent;
                 border: none;
-                color: white;
-                background-color: $carbone;
+
+                &:hover {
+                    background-image: url("../../public/pictures/logo/flecheOrange.jpg");
+                }
             }
-            
+
             & p {
-                color: white;
-                font-size: 1em;
+                color: $orange;
+                font-size: 1.2em;
+                margin-bottom: 20px;
             }
 
             &__input {
                 height: 50px;
                 width: 100px;
-                font-size: 2em;
+                font-size: 2.5em;
                 font-weight: bold;
                 border: none;
+                text-align: center;
+                margin-bottom: 20px;
 
                 &::-webkit-inner-spin-button {
                     -webkit-appearance: none;
-                    margin:0;
+                    margin: 0;
 
                 }
             }
         }
-    }
-
-    &__centerBloc{
-        display: flex;
-        height: 65%;
-        width: 100%;
 
 
-        &__title{
-            width: 20%;
-            color: white;
-            display: flex;
-            align-items: center;
-            margin: 0;
-            transform: rotate( 180deg );
-            writing-mode: vertical-rl;
-            text-orientation: mixed;
-            font-size: 3em;
+        &__centerBloc {
+            // display: flex;
+            height: 55%;
+            width: 100%;
+            font-family: $Avenir;
 
-            & h4 {
-                margin-top: 0;
+            &__filters {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+                &__title {
+                    color: white;
+                    font-size: 2.5em;
+                    width: 100%;
+                    text-align: center;
+                }
+
+                &__button {
+                    border: none;
+                    width: 100%;
+                    margin: 10px 0 25px;
+                    color: white;
+                    font-size: 1.5em;
+                    font-family: $Avenir;
+                    background-color: $carbone;
+                }
             }
         }
-        
-        &__filters {
+
+        &__bottomBloc {
             display: flex;
-            flex-direction: column;
+            justify-content: center;
             align-items: flex-end;
-                
-            & h4 {
-                color: white;
-                font-size: 2.5em;
-                width: 20%;
+            height: 10%;
+            width: 100%;
+
+            &__img {
+                height: 30%;
+                width: 10%;
+                margin-left: 30px;
+                pointer-events: none;
             }
 
             &__button {
+                height: 30px;
                 border: none;
-                width: 20%;
-                margin-bottom: 5px;
                 color: white;
-                font-size: 1.5em;
                 background-color: $carbone;
+                font-size: 1.5em;
+                font-family: $Avenir;
+                pointer-events: all;
+
+                &:hover {
+                    color: $orange;
+                }
+
             }
-        }
-    }
-
-    &__bottomBloc {
-        display: flex;
-        justify-content: center;
-        align-items: flex-end;
-        height: 10%;
-        width: 100%;
-
-        &__img {
-            height: 30%;
-            width: 10%;
-            margin-left: 30px;
-        }
-
-        &__button {
-            height: 30px;
-            border: none;
-            color: white;
-            background-color: $carbone;
-            font-size: 1.5em;
         }
     }
 }
