--- a/suderereact/src/styles/_leftPage.scss
+++ b/suderereact/src/styles/_leftPage.scss
@@ -14,10 +14,10 @@
         transform: rotate(180deg);
         writing-mode: vertical-rl;
         text-orientation: mixed;
-        font-size: 3em;
 
-        & h4 {
+        & h1 {
             margin: 0;
+            font-size: 3vw;
         }
     }
 
@@ -32,36 +32,39 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: space-between;
             height: 30%;
             width: 100%;
 
-            &__returnButton {
+            &__return {
+                width: 100%;
+                height: auto;
 
-                margin-bottom: 20px;
-                height: 6vh;
-                width: 6vh;
-                background-image: url("../../public/pictures/logo/flecheBlanche.jpg");
-                background-repeat: no-repeat;
-                background-size: cover;
-                background-color: transparent;
-                border: none;
+                &__button {
 
-                &:hover {
-                    background-image: url("../../public/pictures/logo/flecheOrange.jpg");
+                    margin-bottom: 30px;
+                    height: 6vh;
+                    width: 6vh;
+                    background-image: url("../../public/pictures/logo/flecheBlanche.jpg");
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    background-color: transparent;
+                    border: none;
+
+                    &:hover {
+                        background-image: url("../../public/pictures/logo/flecheOrange.jpg");
+                    }
                 }
             }
 
             & p {
                 color: $orange;
-                font-size: 1.2em;
-                margin-bottom: 20px;
+                font-size: 1.8vh;
             }
 
             &__input {
-                height: 50px;
-                width: 100px;
-                font-size: 2.5em;
+                height: 40px;
+                width: 80px;
+                font-size: 2vh;
                 font-weight: bold;
                 border: none;
                 text-align: center;
@@ -73,12 +76,20 @@
 
                 }
             }
+
+            &__searchButton {
+                background-color: $orange;
+                border: none;
+                color: white;
+                font-size: 1.6vh;
+                padding: 10px;
+            }
         }
 
 
         &__centerBloc {
             // display: flex;
-            height: 55%;
+            height: 45%;
             width: 100%;
             font-family: $Avenir;
 
@@ -89,7 +100,7 @@
 
                 &__title {
                     color: white;
-                    font-size: 2.5em;
+                    font-size: 3vh;
                     width: 100%;
                     text-align: center;
                 }
@@ -99,40 +110,64 @@
                     width: 100%;
                     margin: 10px 0 25px;
                     color: white;
-                    font-size: 1.5em;
+                    font-size: 2vh;
                     font-family: $Avenir;
                     background-color: $carbone;
+
+                    &:hover {
+                        color: $orange;
+                    }
                 }
             }
         }
 
         &__bottomBloc {
             display: flex;
+            flex-direction: column;
             justify-content: center;
-            align-items: flex-end;
-            height: 10%;
+            height: 20%;
             width: 100%;
 
-            &__img {
-                height: 30%;
-                width: 10%;
-                margin-left: 30px;
-                pointer-events: none;
+            &__button1 {
+                text-align: center;
+                height: 20%;
+                &__button {
+                    height: 30px;
+                    border: none;
+                    color: white;
+                    background-color: $carbone;
+                    font-size: 2.5vh;
+                    font-family: $Avenir;
+                    // margin-right: 10%;
+                    // margin-left: 10%;
+                }
             }
 
-            &__button {
-                height: 30px;
-                border: none;
-                color: white;
-                background-color: $carbone;
-                font-size: 1.5em;
-                font-family: $Avenir;
-                pointer-events: all;
+            &__button2 {
+                display: flex;
+                justify-content: center;
+                margin-top: 10px;
+                height: 40%;
 
-                &:hover {
-                    color: $orange;
+                &__img {
+                    height: 30%;
+                    width: 10%;
                 }
 
+                &__button {
+                    height: 30px;
+                    border: none;
+                    color: white;
+                    background-color: $carbone;
+                    font-size: 2.5vh;
+                    font-family: $Avenir;
+                    margin-right: 10%;
+
+                    &:hover {
+                        color: $orange;
+                    }
+
+                }
             }
         }
     }
