replace trailers pic

--- a/suderereact/src/styles/CommonPage/_centerPage.scss
+++ b/suderereact/src/styles/CommonPage/_centerPage.scss
@@ -233,7 +233,7 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7)
                 width: 47px;
                 height: 47px;
                 // font-size: 3em;
-                background-image: url(../../public/pictures/logo/flecheUpBlanche.png);
+                background-image: url(../../../public/pictures/logo/flecheUpBlanche.png);
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-color: $orange;
@@ -249,7 +249,7 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7)
                 height: 47px;
                 // font-size: 3em;
                 // color: white;
-                background-image: url(../../public/pictures/logo/flecheDownBlanche.png);
+                background-image: url(../../../public/pictures/logo/flecheDownBlanche.png);
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-color: $orange;
