--- a/suderereact/src/styles/index.scss
+++ b/suderereact/src/styles/index.scss
@@ -1,17 +1,14 @@
 @import "./_settings";
 @import "./header.scss";
-@import "./Administration/admin";
-// @import "./dashboardLeft";
-// @import "./dashboardRight";
-@import "./commonPage";
-@import "./leftPage";
-@import "./centerPage";
-@import "./rightPage";
 @import "./connexion.scss";
-@import "./trailersInfoConnect.scss";
-@import "./trailersInfoConsult.scss";
-@import "./trailersModifConnect.scss";
 @import './choiceHome.scss';
+@import "./CommonPage/commonPage";
+@import "./CommonPage/leftPage";
+@import "./CommonPage/centerPage";
+@import "./CommonPage/rightPage";
+@import "./CommonPage/trailersInfoConnect.scss";
+@import "./CommonPage/trailersInfoConsult.scss";
+@import "./CommonPage/trailersModifConnect.scss";
 @import './Administration/admin';
 @import './Administration/dashboardLeft';
 @import './Administration/userInfos';
