--- a/suderereact/src/styles/_leftPage.scss
+++ b/suderereact/src/styles/_leftPage.scss
@@ -40,8 +40,7 @@
                 height: auto;
 
                 &__button {
-
-                    margin-bottom: 30px;
+                    margin-bottom: 20px;
                     height: 6vh;
                     width: 6vh;
                     background-image: url("../../public/pictures/logo/flecheBlanche.jpg");
@@ -58,13 +57,13 @@
 
             & p {
                 color: $orange;
-                font-size: 1.8vh;
+                font-size: 2.1vh;
             }
 
             &__input {
                 height: 40px;
                 width: 80px;
-                font-size: 2vh;
+                font-size: 2.2vh;
                 font-weight: bold;
                 border: none;
                 text-align: center;
@@ -73,7 +72,6 @@
                 &::-webkit-inner-spin-button {
                     -webkit-appearance: none;
                     margin: 0;
-
                 }
             }
 
@@ -85,7 +83,6 @@
                 padding: 10px;
             }
         }
-
 
         &__centerBloc {
             // display: flex;
@@ -136,22 +133,25 @@
                     border: none;
                     color: white;
                     background-color: $carbone;
-                    font-size: 2.5vh;
+                    font-size: 1.8vh;
                     font-family: $Avenir;
-                    // margin-right: 10%;
-                    // margin-left: 10%;
+
+                    &:hover {
+                        color: $orange;
+                    }
                 }
             }
 
             &__button2 {
                 display: flex;
                 justify-content: center;
+                align-items: center;
                 margin-top: 10px;
-                height: 40%;
+                height: 30px;
 
                 &__img {
-                    height: 30%;
-                    width: 10%;
+                    height: 65%;
+                    width: auto;
                 }
 
                 &__button {
@@ -166,7 +166,6 @@
                     &:hover {
                         color: $orange;
                     }
-
                 }
             }
         }
