--- a/suderereact/src/styles/CommonPage/_centerPage.scss
+++ b/suderereact/src/styles/CommonPage/_centerPage.scss
@@ -17,8 +17,7 @@
 }
 
 div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(9),
-div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(9)
-    ~ div[class^="centerPage__carrousel_trailersPic_R"] {
+div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(9)~div[class^="centerPage__carrousel_trailersPic_R"] {
     --scale-a: 1;
     --scale-b: 1.3;
     --scale-c: 1.6;
@@ -29,18 +28,15 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(9)
     --font-pic-d: 1.5em;
     --index_z-r3: -5;
     --index_z-r8: 2;
-    // --marge-a: 10%;
     --marge-b: 16vh;
     --marge-c: 26vh;
     --marge-d: 37vh;
     --marge-e: 48vh;
     --marge-f: 58vh;
-    // --marge-g: 470px;
 }
 
 div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7),
-div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7)
-    ~ div[class^="centerPage__carrousel_trailersPic_R"] {
+div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7)~div[class^="centerPage__carrousel_trailersPic_R"] {
     --scale-a: 1.3;
     --scale-b: 1.6;
     --scale-c: 1.3;
@@ -56,8 +52,6 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7)
     --marge-c: 37vh;
     --marge-d: 48vh;
     --marge-e: 58vh;
-    // --marge-f: 62%;
-    // --marge-g: 77%;
 }
 
 [class^="centerPage__carrousel_trailersPic_R"] {
@@ -127,14 +121,12 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7)
             display: flex;
             flex-direction: column;
             align-items: center;
-            // justify-content: space-between;
             width: 80%;
             height: 80vh;
             position: relative;
 
             &_R1 {
                 transition-delay: 1ms;
-                // margin: var(--marge-a) auto 0;
                 transform: scale(1);
                 transition: all 0.5s;
                 z-index: -5;
@@ -142,7 +134,6 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7)
 
             &_R2 {
                 transition-delay: 3ms;
-                // margin: var(--marge-b) auto 0;
                 transform: scale(1);
                 transition: all 0.9s;
                 z-index: -5;
@@ -152,7 +143,6 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7)
                 transition-delay: 3ms;
                 margin: var(--marge-a) auto 0;
                 transform: scale(1);
-                /* variable 1.3 ou 1.0 suivant serie */
                 transition: all 0.9s;
                 z-index: var(--index_z-r3);
             }
@@ -161,7 +151,6 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7)
                 transition-delay: 4ms;
                 margin: var(--marge-b) auto 0;
                 transform: scale(var(--scale-a));
-                /* variable 1.6 ou 1.3 suivant serie */
                 transition: all 1s;
                 z-index: 2;
             }
@@ -170,7 +159,6 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7)
                 transition-delay: 5ms;
                 margin: var(--marge-c) auto 0;
                 transform: scale(var(--scale-b));
-                /* variable 1.6 ou 1.3 suivant serie */
                 transition: all 0.9s;
                 z-index: 2;
             }
@@ -179,7 +167,6 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7)
                 transition-delay: 6ms;
                 margin: var(--marge-d) auto 0;
                 transform: scale(var(--scale-c));
-                /* variable 1.3 ou 1.0 suivant serie */
                 transition: all 0.9s;
                 z-index: 2;
             }
@@ -228,11 +215,10 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7)
 
             &__buttom {
                 z-index: 1;
+
                 &_Up {
-                    // position: relative;
                     width: 47px;
                     height: 47px;
-                    // font-size: 3em;
                     background-image: url(../../../public/pictures/logo/flecheUpBlanche.png);
                     background-repeat: no-repeat;
                     background-size: cover;
@@ -242,12 +228,10 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7)
                     border-radius: 10px;
                     border: none;
                 }
+
                 &_Down {
-                    // position: relative;
                     width: 47px;
                     height: 47px;
-                    // font-size: 3em;
-                    // color: white;
                     background-image: url(../../../public/pictures/logo/flecheDownBlanche.png);
                     background-repeat: no-repeat;
                     background-size: cover;
