add creating user CSS

--- a/suderereact/src/styles/index.scss
+++ b/suderereact/src/styles/index.scss
@@ -11,3 +11,5 @@
 @import './Administration/userInformations';
 @import './Administration/userFromList';
 @import './Administration/updateButtons';
+@import './Administration/createUser';
+@import './Administration/userForm';
