--- a/suderereact/src/styles/Administration/_userPassword.scss
+++ b/suderereact/src/styles/Administration/_userPassword.scss
@@ -1,29 +1,33 @@
-.userPassword{
+.userPassword {
     height: 65vh;
     display: flex;
     flex-direction: column;
     color: white;
     font-size: 1.2vw;
-    &__title{
+    &__title {
         margin: 20px auto;
     }
-    &__form{
+    &__form {
         margin-top: 50px;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        &__inputs{
-            &__line{
+        &__inputs {
+            &__line {
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
                 margin-top: 10px;
-                &__input{
+                &__input {
                     width: 40%;
+                    &--notMatching {
+                        outline: solid 1px $raspberry;
+                        width: 40%;
+                    }
                 }
             }
         }
-        &__button{
+        &__button {
             width: 50%;
             margin: 0 auto;
             margin-top: 30px;
