--- a/suderereact/src/styles/Administration/_userInformations.scss
+++ b/suderereact/src/styles/Administration/_userInformations.scss
@@ -32,4 +32,21 @@
             }
         }
     }
+    &__notSelected {
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        text-align: center;
+        &__img {
+            width: 70%;
+        }
+        &__info {
+            display: block;
+            font-size: 1.2vw;
+            margin-top: 0;
+        }
+    }
 }
