--- a/suderereact/src/styles/CommonPage/_leftPage.scss
+++ b/suderereact/src/styles/CommonPage/_leftPage.scss
@@ -128,6 +128,7 @@
             &__button1 {
                 text-align: center;
                 height: 20%;
+
                 &__button {
                     height: 30px;
                     border: none;
@@ -139,6 +140,10 @@
                     &:hover {
                         color: $orange;
                     }
+                }
+
+                &__buttonNone {
+                    display: none;
                 }
             }
 
