--- a/suderereact/src/styles/index.scss
+++ b/suderereact/src/styles/index.scss
@@ -19,3 +19,7 @@
 @import "./Administration/userInformations";
 @import "./Administration/userFromList";
 @import "./Administration/updateButtons";
+@import "./Statistic/StatisticSort.scss";
+@import "./Statistic/StatisticChartDoughnut.scss";
+@import "./Statistic/StatisticGraphic.scss";
+@import "./Statistic/StatisticFieldset.scss";
