add responsive to commonPage

--- a/suderereact/src/styles/_choiceHome.scss
+++ b/suderereact/src/styles/_choiceHome.scss
@@ -43,6 +43,9 @@
             }
         }
     }
+    &__navConnect{
+        
+    }
     &__team {
         background-color: $warm_gray_1;
         border: none;
