--- a/suderereact/src/styles/CommonPage/_centerPage.scss
+++ b/suderereact/src/styles/CommonPage/_centerPage.scss
@@ -79,12 +79,22 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7)~
     height: 60px;
     font-size: 2em;
     font-weight: bolder;
+    @media screen and (max-width: 520px) {
+        width: 40px;
+        height: 40px;
+        }
+
 }
 
 [class^="centerPage__carrousel_trailersNum_color_R_small_"] {
     width: 30px;
     height: 30px;
     font-size: 1em;
+    @media screen and (max-width: 520px) {
+        width: 20px;
+        height: 20px;
+        font-size: 0.8em;
+        }
 }
 
 .centerPage {
@@ -98,10 +108,15 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7)~
         width: 100%;
         height: 13%;
         display: flex;
+        flex-direction: column;
         justify-content: space-evenly;
         background-color: #e0ded8;
         color: $orange;
         text-align: center;
+        @media screen and (max-width: 520px) {
+            height: 20%;
+            }
+    
 
         & h4 {
             margin: auto 0;
@@ -120,6 +135,10 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7)~
         justify-content: center;
         align-items: center;
         background-color: #e0ded8;
+        @media screen and (max-width: 520px) {
+            height: 78%;
+            }
+    
 
         &_trailersPic {
             display: flex;
@@ -198,6 +217,9 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7)~
                 transform: scale(1);
                 z-index: -51;
             }
+            @media screen and (max-width: 520px) {
+                display: none;
+            }        
         }
 
         &_trailersNum {
@@ -253,7 +275,6 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7)~
                 position: relative;
                 align-items: center;
                 justify-content: space-evenly;
-                // margin-top: 5px;
                 height: 60px;
                 width: 60px;
                 color: white;
@@ -281,6 +302,10 @@ div[class^="centerPage__carrousel_trailersPic_R"]:first-child:nth-last-child(7)~
                 &_R_big_green {
                     background-color: $vert_pomme;
                 }
+                @media screen and (max-width: 520px) {
+                    width: 40px;
+                    height: 40px;
+                    }            
             }
         }
     }
