--- a/suderereact/src/styles/CommonPage/_commonPage.scss
+++ b/suderereact/src/styles/CommonPage/_commonPage.scss
@@ -3,11 +3,18 @@
     width: 100vw;
     height: 100vh;
     background-color: $carbone;
+    @media screen and (max-width: 520px) {
+        flex-direction: column;
+    }
 
     &__left {
         width: 24%;
         margin: 15px 0 15px 15px;
-        // background-color: white;
+        @media screen and (max-width: 520px) {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+        }    
     }
 
     &__isTrain {
@@ -17,11 +24,23 @@
         &__center {
             width: 50%;
             margin: 15px 0 15px 0px;
+            @media screen and (max-width: 520px) {
+                width: 35%;
+            }
+
         }
 
         &__right {
             width: 50%;
             margin: 15px 15px 15px 0;
+            @media screen and (max-width: 520px) {
+                width: 65%;
+            }
+
+        }
+        @media screen and (max-width: 520px) {
+            width: 100%;
+            height: 100%;
         }
     }
 
@@ -35,6 +54,9 @@
             color: $orange;
             font-size: 4vh;
             text-align: center;
+        }                
+        @media screen and (max-width: 520px) {
+            width: 100%;
         }
 
     }
