--- a/suderereact/src/styles/CommonPage/_leftPage.scss
+++ b/suderereact/src/styles/CommonPage/_leftPage.scss
@@ -4,6 +4,11 @@
     display: flex;
     align-items: center;
     font-family: $Avenir;
+    @media screen and (max-width: 520px) {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
 
     &__title {
         width: 20%;
@@ -14,10 +19,20 @@
         transform: rotate(180deg);
         writing-mode: vertical-rl;
         text-orientation: mixed;
+        @media screen and (max-width: 520px) {
+            width: 100%;
+            transform: rotate(0deg);
+            writing-mode: horizontal-tb;
+            text-orientation: mixed;
+            justify-content: center;
+        }
 
         & h1 {
             margin: 0;
-            font-size: 3vw;
+            font-size: 5vh;
+            @media screen and (max-width: 520px) {
+                font-size: 3vh;
+            }
         }
     }
 
@@ -27,6 +42,10 @@
         height: 100%;
         width: 80%;
         justify-content: center;
+        @media screen and (max-width: 520px) {
+            align-items: center;
+            width: 100%;
+        }
 
         &__topBloc {
             display: flex;
@@ -34,6 +53,9 @@
             align-items: center;
             height: 30%;
             width: 100%;
+            @media screen and (max-width: 520px) {
+                flex-direction: row;
+            }
 
             &__return {
                 width: 100%;
@@ -41,6 +63,7 @@
 
                 &__button {
                     margin-bottom: 20px;
+                    margin-right: 20px;
                     height: 6vh;
                     width: 6vh;
                     background-image: url("../../../public/pictures/logo/flecheBlanche.jpg");
@@ -52,12 +75,21 @@
                     &:hover {
                         background-image: url("../../../public/pictures/logo/flecheOrange.jpg");
                     }
+                    @media screen and (max-width: 520px) {
+                        margin-bottom: 0;
+                    }
+                }
+                @media screen and (max-width: 520px) {
+                    width: 80px;
                 }
             }
 
             & p {
                 color: $orange;
                 font-size: 2.1vh;
+                @media screen and (max-width: 520px) {
+                    width: 380px;
+                }
             }
 
             &__input {
@@ -73,6 +105,9 @@
                     -webkit-appearance: none;
                     margin: 0;
                 }
+                @media screen and (max-width: 520px) {
+                    margin: 0 20px;
+                }
             }
 
             &__searchButton {
@@ -82,13 +117,18 @@
                 font-size: 1.6vh;
                 padding: 10px;
             }
+            @media screen and (max-width: 520px) {
+                width: 90%;
+            }
         }
 
         &__centerBloc {
-            // display: flex;
             height: 45%;
             width: 100%;
             font-family: $Avenir;
+            @media screen and (max-width: 520px) {
+                display: none;
+            }
 
             &__filters {
                 display: flex;
@@ -124,6 +164,9 @@
             justify-content: center;
             height: 20%;
             width: 100%;
+            @media screen and (max-width: 520px) {
+                display: none;
+            }
 
             &__button1 {
                 text-align: center;
